--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 @import "custom";
 $grey: #808080;
 $lightgrey: #BDBDBD;
+$greyedout: #DCDCDC;
 
 body {
   margin: 12px 20px;
@@ -33,8 +34,46 @@ textarea {
   }
 }
 
-#symmetrickey > p > .length {
-  font-size: 60%;
+#symmetrickey {
+
+  > input {
+    font-family: monospace;
+    padding-left: 6px;
+    width: 100%;
+  }
+
+  input[disabled] {
+    background-color: #E9ECEF;
+    color: #636C77;
+  }
+
+  > div {
+    margin-left: 32px;
+
+    span {
+      color: $lightgrey;
+      display: inline-block;
+      font-size: 80%;
+      width: 140px;
+    }
+
+    input {
+      font-family: monospace;
+      margin-left: 8px;
+      padding-left: 6px;
+      width: 440px;
+    }
+
+    select {
+      display: inline-block;
+      margin-left: 8px;
+      width: 180px;
+    }
+  }
+
+  > p > .length {
+    font-size: 60%;
+  }
 }
 
 .panel-left {
@@ -90,48 +129,40 @@ textarea {
 }
 
 
-#symmetrickey {
-
-  > input {
-    font-family: monospace;
-    padding-left: 6px;
-    width: 100%;
-  }
-
-  > div {
-    margin-left: 32px;
-
-    span {
-      color: $lightgrey;
-      display: inline-block;
-      font-size: 80%;
-      width: 140px;
-    }
-    input {
-      font-family: monospace;
-      margin-left: 8px;
-      padding-left: 6px;
-      width: 440px;
-    }
-    select {
-      display: inline-block;
-      margin-left: 8px;
-      width: 180px;
-    }
-  }
-}
-
-#ta_privatekey, #ta_publickey {
+#ta_privatekey,
+#ta_publickey {
   font-size: .8rem;
   max-height: 232px;
 }
 
-.banner > .alert {
-  margin: 0;
-  z-index: 10;
+.banner {
+  background-color: #DFDDDD;
+  height: 120px;
+  margin-bottom: 24px;
+
+  > div {
+    top: 96px;
+  }
+
+  .buildversion {
+    font-size: 75%;
+    font-style: italic;
+    left: 0%;
+    margin-right: 6px;
+    position: relative;
+    text-align: right;
+    top: 100px;
+    transform: none;
+  }
+
+  > .alert {
+    margin: 0;
+    z-index: 10;
+  }
 }
 
-.btn-copy, .btn-newkey {
+.btn-copy,
+.btn-newkey {
   float: right;
   margin: 0 4px;
   padding: 2px 6px;
@@ -139,14 +170,9 @@ textarea {
   top: 8px;
 }
 
-.banner, .footer {
+.banner,
+.footer {
   border: 1px dotted $grey;
-}
-
-.banner {
-  background-color: #DFDDDD;
-  height: 120px;
-  margin-bottom: 24px;
 }
 
 .footer {
@@ -156,7 +182,8 @@ textarea {
   padding: 0 4px;
 }
 
-.banner > h2, .banner > div {
+.banner > h2,
+.banner > div {
   left: 50%;
   margin: 0;
   margin-right: -50%;
@@ -164,23 +191,9 @@ textarea {
   transform: translate(-50%, -50%)
 }
 
-.banner > h2, .footer > h2 {
+.banner > h2,
+.footer > h2 {
   top: 46px;
-}
-
-.banner > div {
-  top: 96px;
-}
-
-.banner > div#buildversion {
-  font-size: 75%;
-  font-style: italic;
-  left: 0%;
-  margin-right: 6px;
-  position: relative;
-  text-align: right;
-  top: 100px;
-  transform: none;
 }
 
 .alert.fade {
@@ -204,10 +217,5 @@ textarea {
 }
 
 .outdated {
-  background-color: #DCDCDC;
-}
-
-#symmetrickey input[disabled] {
-  color: #636C77;
-  background-color: #E9ECEF;
+  background-color: $greyedout;
 }
