support keyId in input
  new html markup
  app logic to handle it
  CSS to style it
  also rationalize CSS on other central panel divs

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -98,6 +98,15 @@ textarea {
     width: 118px;
   }
 
+  > div {
+    font-size: 60%;
+    margin-top: 16px;
+
+    input {
+      width: 118px;
+    }
+  }
+
   > select:not(:first-child) {
     margin-top: 14px;
   }
